# Seshat

./: .gitignore  BUILD_PLAN.md  LICENSE  README.md  Seshat.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COCKPIT.md
eval/: questions.example.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Chat.tsx  Code.tsx  Data.tsx  Papers.tsx  Timeline.tsx  api.ts  icons.tsx  theme.css
packaging/: README.md  build.ps1  seshat.iss  seshat.spec
seshat/: __init__.py  cli.py  config.py
seshat/api/: __init__.py  app.py  server.py
seshat/app/: __init__.py  autostart.py  desktop.py  entry.py  launch.py  server.py  setup.py  supervisor.py  tray.py  userconfig.py  window.py
seshat/backfill/: __init__.py  git_history.py
seshat/eval/: __init__.py  runner.py
seshat/inference/: __init__.py  journal.py  prompts.py  provider.py  queue.py
seshat/papers/: __init__.py  ingest.py  linking.py  web.py
seshat/query/: __init__.py  data.py  engine.py  files.py  timeline.py
seshat/store/: __init__.py  db.py  schema.py  vectors.py
seshat/ui/: __init__.py  app.py
seshat/watcher/: __init__.py  daemon.py  ignore.py  notebooks.py  results.py  scripts.py  sessions.py  truncation.py
tests/: conftest.py  test_api.py  test_api_chat.py  test_api_papers.py  test_app.py  test_backfill.py  test_bugfixes.py  test_cli.py  test_config.py  test_data.py  test_embeddings.py  test_eval.py  test_files.py  test_ignore.py  test_inference.py  test_notebooks.py  test_packaging.py  test_papers.py  test_query.py  test_sessions.py  test_store.py  test_timeline.py  test_vectors.py  test_watcher.py  test_web.py
