[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seshat"
version = "0.1.0"
description = "A research memory layer: passive capture and reconstruction of what you tried and why."
readme = "Seshat.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dumee-25" }]
dependencies = [
    "click>=8.1",
    "chromadb>=1.0",
    "watchdog>=4.0",
    "pathspec>=0.12",
    "nvidia-ml-py>=12.0",
]

[project.optional-dependencies]
# Local embedding model (bge-small-en-v1.5). Optional because it pulls in
# torch; CI and tests use an injected lightweight embedder instead.
embeddings = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
seshat = "seshat.cli:main"

[tool.setuptools.packages.find]
include = ["seshat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
