[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seshat"
version = "0.1.0"
description = "A research memory layer: passive capture and reconstruction of what you tried and why."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dumee-25" }]
dependencies = [
    "click>=8.1",
    "sqlite-vec>=0.1.6",
    "watchdog>=4.0",
    "pathspec>=0.12",
    "nvidia-ml-py>=12.0",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
# The Streamlit frontend (`seshat ui`). Optional: heavy, and headless installs
# (servers, CI) don't need it.
# Embeddings now go through Ollama (or the configured API provider), so there
# is no torch/sentence-transformers dependency — that is what makes Seshat
# packageable as a desktop app.
ui = [
    "streamlit>=1.35",
]
# The native desktop shell (`seshat app`): a window (pywebview) plus a
# system-tray watcher (pystray). Needs the `ui` extra too.
desktop = [
    "pywebview>=5.0",
    "pystray>=0.19",
    "pillow>=10.0",
]
# The cockpit backend (`seshat cockpit`): a FastAPI server for the React
# workspace. The frontend is built separately (see frontend/).
cockpit = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.scripts]
seshat = "seshat.cli:main"

[tool.setuptools.packages.find]
include = ["seshat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
